[gd_scene load_steps=20 format=3 uid="uid://beqftbqir3tcs"]

[ext_resource type="Script" uid="uid://dnull744voixw" path="res://Scripts/InteractiveUI/altitude_control.gd" id="1_yeeef"]
[ext_resource type="Texture2D" uid="uid://crujhoamyq0ud" path="res://Images/Hypersonic Height.png" id="2_bfwpy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yb4hy"]
bg_color = Color(1, 0.3437347, 0.27267864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cvu0"]
bg_color = Color(0.89964485, 0.017419241, 0.39105943, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uus7w"]
bg_color = Color(0.99999994, 0.809156, 0.51979816, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_te0qc"]
bg_color = Color(0.8297025, 0.5216374, 1.92523e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8cifl"]
bg_color = Color(0.16313255, 0.46658933, 0.6094668, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aomy4"]
bg_color = Color(0.41981313, 0.41981313, 0.41981304, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyn2x"]
bg_color = Color(1, 0.51484615, 0.47811973, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_227vq"]
bg_color = Color(0.9671039, 0, 0.44619834, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1r1b1"]
bg_color = Color(1, 0.71125555, 0.41379315, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1v5s"]
bg_color = Color(0.8520136, 0.5056828, 1.92523e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wgd1"]
bg_color = Color(0.37514037, 0.69677067, 5.7756904e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uymbp"]
bg_color = Color(0.16812405, 0.58335197, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6x065"]
bg_color = Color(0.7335084, 0.6897005, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6f7c2"]
bg_color = Color(0.4696101, 0.024106864, 0.69754714, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7qee"]
bg_color = Color(0.35080007, 0.6356301, 0.8080489, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4xo6"]
bg_color = Color(0.3563873, 0.64063376, 0.77597374, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0pvm"]
bg_color = Color(0, 0.68952066, 0.6658644, 1)

[node name="InteractiveLabUi" type="Control" node_paths=PackedStringArray("altitude_slider", "altitude_sbox", "mach_slider", "mach_sbox", "fuel_type", "burn_cp_sbox", "energy_gen")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yeeef")
altitude_slider = NodePath("AltitudeControl/AltitudeSlider")
altitude_sbox = NodePath("AltitudeControl/AltitudeSpinBox")
mach_slider = NodePath("MachControl/MachSlider")
mach_sbox = NodePath("MachControl/MachSpinBox")
fuel_type = NodePath("FuelControl/VBoxContainer/FuelType")
burn_cp_sbox = NodePath("CPBurnControl/VBoxContainer/CPSpinBox")
energy_gen = NodePath("EnergyFuelControl/VBoxContainer/Energy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = -3.0
offset_right = 1152.0
offset_bottom = 650.0

[node name="VehicleUI" type="Control" parent="."]
anchors_preset = 0
offset_left = -7.0
offset_top = -30.0
offset_right = 33.0
offset_bottom = 10.0

[node name="HypersonicImages" type="Control" parent="VehicleUI"]
anchors_preset = 0
offset_left = 3.0
offset_top = 36.0
offset_right = 43.0
offset_bottom = 76.0

[node name="HypersonicVehicle" type="TextureRect" parent="VehicleUI/HypersonicImages"]
layout_mode = 0
offset_left = 138.0
offset_top = 140.0
offset_right = 2058.0
offset_bottom = 1220.0
scale = Vector2(0.52324104, 0.29342708)
texture = ExtResource("2_bfwpy")

[node name="ThetasControl" type="Control" parent="VehicleUI"]
anchors_preset = 0
offset_left = 183.0
offset_top = 481.0
offset_right = 223.0
offset_bottom = 521.0

[node name="ThetasContainer" type="VBoxContainer" parent="VehicleUI/ThetasControl"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 88.0
offset_bottom = 82.0

[node name="Theta1" type="SpinBox" parent="VehicleUI/ThetasControl/ThetasContainer"]
layout_mode = 2
theme_override_styles/up_background = SubResource("StyleBoxFlat_yb4hy")
theme_override_styles/down_background_disabled = SubResource("StyleBoxFlat_7cvu0")
max_value = 90.0
step = 0.1

[node name="Theta2" type="SpinBox" parent="VehicleUI/ThetasControl/ThetasContainer"]
layout_mode = 2
theme_override_styles/up_background = SubResource("StyleBoxFlat_uus7w")
theme_override_styles/down_background_disabled = SubResource("StyleBoxFlat_te0qc")
max_value = 90.0
step = 0.1

[node name="LabelsContainer" type="VBoxContainer" parent="VehicleUI/ThetasControl"]
layout_mode = 0
offset_left = -45.0
offset_top = -3.0
offset_right = -5.0
offset_bottom = 85.0

[node name="Theta1Label" type="Label" parent="VehicleUI/ThetasControl/LabelsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "θ1"

[node name="Theta2Label" type="Label" parent="VehicleUI/ThetasControl/LabelsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "θ2"

[node name="VehicleWidth" type="Control" parent="VehicleUI"]
anchors_preset = 0
offset_left = 626.0
offset_top = 117.0
offset_right = 666.0
offset_bottom = 157.0

[node name="VehicleWidthContainer" type="VBoxContainer" parent="VehicleUI/VehicleWidth"]
layout_mode = 0
offset_left = -28.0
offset_top = 20.0
offset_right = 78.0
offset_bottom = 78.0

[node name="SpinBox" type="SpinBox" parent="VehicleUI/VehicleWidth/VehicleWidthContainer"]
layout_mode = 2
alignment = 1

[node name="VehicleLabel" type="Label" parent="VehicleUI/VehicleWidth/VehicleWidthContainer"]
layout_mode = 2
text = "Vehicle Width (meters)"

[node name="AltitudeControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="AltitudeControl"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8cifl")

[node name="AltitudeSlider" type="VSlider" parent="AltitudeControl"]
layout_mode = 0
offset_left = 3.0
offset_top = 46.0
offset_right = 53.0
offset_bottom = 646.0
max_value = 85500.0
step = 50.0

[node name="AltitudeLabel" type="Label" parent="AltitudeControl"]
layout_mode = 0
offset_left = 50.0
offset_top = 95.0
offset_right = 114.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 40
text = "A
L
T
I
T
U
D
E
(m)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AltitudeSpinBox" type="SpinBox" parent="AltitudeControl"]
layout_mode = 0
offset_left = 6.0
offset_top = 3.0
offset_right = 92.5625
offset_bottom = 34.0
max_value = 85500.0
step = 50.0

[node name="HeightControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 124.0
offset_top = 559.0
offset_right = 164.0
offset_bottom = 599.0

[node name="Panel" type="Panel" parent="HeightControl"]
layout_mode = 0
offset_left = -2.0
offset_top = -30.0
offset_right = 358.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aomy4")

[node name="SpinboxesContainer" type="HBoxContainer" parent="HeightControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="h1" type="SpinBox" parent="HeightControl/SpinboxesContainer"]
layout_mode = 2
theme_override_styles/up_background = SubResource("StyleBoxFlat_gyn2x")
theme_override_styles/down_background_disabled = SubResource("StyleBoxFlat_227vq")
max_value = 20.0
step = 0.01
alignment = 1

[node name="h2" type="SpinBox" parent="HeightControl/SpinboxesContainer"]
layout_mode = 2
theme_override_styles/up_background = SubResource("StyleBoxFlat_1r1b1")
theme_override_styles/down_background_disabled = SubResource("StyleBoxFlat_h1v5s")
max_value = 20.0
step = 0.01
alignment = 1

[node name="h3" type="SpinBox" parent="HeightControl/SpinboxesContainer"]
layout_mode = 2
theme_override_styles/up_background = SubResource("StyleBoxFlat_5wgd1")
theme_override_styles/down_background_disabled = SubResource("StyleBoxFlat_uymbp")
max_value = 20.0
step = 0.01
alignment = 1

[node name="OutNozzleHeight" type="SpinBox" parent="HeightControl/SpinboxesContainer"]
layout_mode = 2
theme_override_styles/up_background = SubResource("StyleBoxFlat_6x065")
theme_override_styles/down_background_disabled = SubResource("StyleBoxFlat_6f7c2")
max_value = 10.0
step = 0.01
alignment = 1

[node name="LabelsContainer" type="HBoxContainer" parent="HeightControl"]
layout_mode = 0
offset_left = -2.0
offset_top = 51.0
offset_right = 348.0
offset_bottom = 91.0

[node name="h1" type="Label" parent="HeightControl/LabelsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "h1"
horizontal_alignment = 1

[node name="h2" type="Label" parent="HeightControl/LabelsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "h2"
horizontal_alignment = 1

[node name="h3" type="Label" parent="HeightControl/LabelsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "h3"
horizontal_alignment = 1

[node name="he" type="Label" parent="HeightControl/LabelsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "he"
horizontal_alignment = 1

[node name="Height Title" type="Label" parent="HeightControl"]
layout_mode = 0
offset_left = 103.0
offset_top = -31.0
offset_right = 257.0
offset_bottom = -8.0
text = "Heights Adjustment"

[node name="FuelControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 387.0
offset_top = -150.0
offset_right = 427.0
offset_bottom = -110.0

[node name="Panel" type="Panel" parent="FuelControl"]
layout_mode = 0
offset_left = 96.0
offset_top = 170.0
offset_right = 721.0
offset_bottom = 230.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j7qee")

[node name="VBoxContainer" type="HBoxContainer" parent="FuelControl"]
layout_mode = 0
offset_left = 108.0
offset_top = 175.0
offset_right = 708.0
offset_bottom = 225.0

[node name="FuelLabel" type="Label" parent="FuelControl/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 35
text = "Fuel Type"

[node name="FuelType" type="OptionButton" parent="FuelControl/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="FuelLabel2" type="Label" parent="FuelControl/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 35
text = "Friction"

[node name="FrictionSpinBox" type="SpinBox" parent="FuelControl/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="MachControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 146.0
offset_top = 27.0
offset_right = 186.0
offset_bottom = 67.0

[node name="Panel" type="Panel" parent="MachControl"]
layout_mode = 0
offset_left = 1.0
offset_top = -11.0
offset_right = 301.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g4xo6")

[node name="MachLabel" type="Label" parent="MachControl"]
layout_mode = 0
offset_left = 6.0
offset_top = -17.0
offset_right = 179.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 30
text = "Mach Number"

[node name="MachSpinBox" type="SpinBox" parent="MachControl"]
layout_mode = 0
offset_left = 214.0
offset_top = 14.0
offset_right = 300.5625
offset_bottom = 45.0
max_value = 50.0
step = 0.5

[node name="MachSlider" type="HSlider" parent="MachControl"]
layout_mode = 0
offset_left = 3.0
offset_top = 24.0
offset_right = 203.0
offset_bottom = 40.0
max_value = 50.0
step = 0.01

[node name="CPBurnControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 865.0
offset_top = 445.0
offset_right = 905.0
offset_bottom = 485.0

[node name="VBoxContainer" type="VBoxContainer" parent="CPBurnControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CP" type="Label" parent="CPBurnControl/VBoxContainer"]
layout_mode = 2
text = "Engine Burn CP"

[node name="CpUnitLabel" type="Label" parent="CPBurnControl/VBoxContainer"]
layout_mode = 2
text = "J /Kg K"
horizontal_alignment = 1

[node name="CPSpinBox" type="SpinBox" parent="CPBurnControl/VBoxContainer"]
layout_mode = 2
max_value = 5000.0
step = 0.001
alignment = 1

[node name="EnergyFuelControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 583.0
offset_top = 467.0
offset_right = 623.0
offset_bottom = 507.0

[node name="VBoxContainer" type="VBoxContainer" parent="EnergyFuelControl"]
layout_mode = 0
offset_left = -15.0
offset_top = -17.0
offset_right = 183.0
offset_bottom = 33.0

[node name="Title" type="Label" parent="EnergyFuelControl/VBoxContainer"]
layout_mode = 2
text = "⚡Energy Generated by Fuel"

[node name="Energy" type="Label" parent="EnergyFuelControl/VBoxContainer"]
layout_mode = 2

[node name="Generate" type="Button" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 588.0
offset_right = 1152.0
offset_bottom = 651.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_m0pvm")
text = "Generate"

[connection signal="value_changed" from="VehicleUI/ThetasControl/ThetasContainer/Theta1" to="." method="_on_theta_1_value_changed"]
[connection signal="value_changed" from="VehicleUI/ThetasControl/ThetasContainer/Theta2" to="." method="_on_theta_2_value_changed"]
[connection signal="value_changed" from="VehicleUI/VehicleWidth/VehicleWidthContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="AltitudeControl/AltitudeSlider" to="." method="_on_altitude_slider_value_changed"]
[connection signal="value_changed" from="AltitudeControl/AltitudeSlider" to="AltitudeControl" method="_on_altitude_slider_value_changed"]
[connection signal="value_changed" from="AltitudeControl/AltitudeSpinBox" to="." method="_on_altitude_spin_box_value_changed"]
[connection signal="value_changed" from="HeightControl/SpinboxesContainer/h1" to="." method="_on_h_1_value_changed"]
[connection signal="value_changed" from="HeightControl/SpinboxesContainer/h2" to="." method="_on_h_2_value_changed"]
[connection signal="value_changed" from="HeightControl/SpinboxesContainer/h3" to="." method="_on_h_3_value_changed"]
[connection signal="value_changed" from="HeightControl/SpinboxesContainer/OutNozzleHeight" to="." method="_on_out_nozzle_height_value_changed"]
[connection signal="item_selected" from="FuelControl/VBoxContainer/FuelType" to="." method="_on_fuel_type_item_selected"]
[connection signal="value_changed" from="FuelControl/VBoxContainer/FrictionSpinBox" to="." method="_on_friction_spin_box_value_changed"]
[connection signal="value_changed" from="MachControl/MachSpinBox" to="." method="_on_mach_spin_box_value_changed"]
[connection signal="value_changed" from="MachControl/MachSlider" to="." method="_on_mach_slider_value_changed"]
[connection signal="value_changed" from="CPBurnControl/VBoxContainer/CPSpinBox" to="." method="_on_cp_spin_box_value_changed"]
[connection signal="pressed" from="Generate" to="." method="_on_generate_pressed"]
